Switch to enums for simple value configs